modify data source files for sven and seventh consortium

--- a/_data/world/characters/spooks-and-supernaturals.yml
+++ b/_data/world/characters/spooks-and-supernaturals.yml
@@ -57,7 +57,7 @@
 
 - name: Doctor Sven the Crow
   w-id: doctor-sven
-  excerpt: Amorphous plague doctor. New owner of one of [Flan](/wiki/flan/)'s kidneys.
+  excerpt: Amorphous plague doctor. New owner of one of [Flan](/wiki/flan)'s kidneys.
 
 - name: Joseph Woodward
   w-id: joseph-woodward
