Add woodward page

--- a/_data/world/characters/spooks-and-supernaturals.yml
+++ b/_data/world/characters/spooks-and-supernaturals.yml
@@ -61,4 +61,4 @@
 
 - name: Joseph Woodward
   w-id: joseph-woodward
-  excerpt: A man in a hat. Real estate agent for the Seventh Tower Consortium. Father to Sizzle. Synergizes across all metrics. 
+  collection: npcs
