various npc data updates

--- a/_data/world/characters/nobles-and-notables.yml
+++ b/_data/world/characters/nobles-and-notables.yml
@@ -37,7 +37,7 @@
   excerpt: Minor nobleman, private banker, definite traitor to the Empire. In custody, awaiting trial.
 
 - name: Lady Bowmore 
-  w-id: lady-bowmmore
+  w-id: lady-bowmore
   excerpt: Grande Damme of Duskvolian society. Unflappable. A great respecter of lineage. Dead by trampling.
 
 - name: Stuart Bowmore
