--- a/_data/world/characters/others-of-note.yml
+++ b/_data/world/characters/others-of-note.yml
@@ -37,3 +37,7 @@
 - name: Quellin
   w-id: quellin
   excerpt: A witch with a focus on rituals and folk physicking, now a devoted priestess of Vazara.
+
+- name: Old Meachum
+  w-id: old-meachum
+  excerpt: Owner and operator of Meachum's hagfish farm. Now deceased.
