--- a/_data/world/characters/law-and-order.yml
+++ b/_data/world/characters/law-and-order.yml
@@ -16,5 +16,5 @@
   excerpt: Inspector from the Capital. Extremely loose canon (results guaranteed). Canonically based on Charlie Day. Also Jammer's ex.
 
 - name: The Spider
-  w-id: claire-strangford
+  w-id: the-spider
   excerpt: Masked vigilante alias of Claire Strangford. Allied with the Clockmaker, Bea, and possibly others. Enhanced. Not wearing hockey pads.
