--- a/_config.yml
+++ b/_config.yml
@@ -18,15 +18,15 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 
-title: Blades in the Dark Philadelphia
+title: Void Sea Philly
 email: your-email@example.com
 description: >- # this means to ignore newlines until "baseurl:"
   Write an awesome description for your new site here. You can edit this
   line in _config.yml. It will appear in your document head meta (for
   Google search results) and in your feed.xml site description.
 baseurl: "" # the subpath of your site, e.g. /blog
-url: https://bitd-philly.github.io # the base hostname & protocol for your site, e.g. http://example.com
-domain: bitd-philly.github.io
+url: https://voidseaphilly.com # the base hostname & protocol for your site, e.g. http://example.com
+domain: voidseaphilly.com
 twitter_username: jekyllrb
 github_username:  jekyll
 
