--- a/_data/world/factions/underworld.yml
+++ b/_data/world/factions/underworld.yml
@@ -56,6 +56,7 @@
   tier: 2
   hold: W
   status: 0
+  excerpt: Enigmatic, possibly-supernatural gang. Might be related to the Spirit Wardens.
 - name: Ulf Ironborn
   id: ulf-ironborn
   tier: 1
