--- a/_data/world/characters/others-of-note.yml
+++ b/_data/world/characters/others-of-note.yml
@@ -6,13 +6,21 @@
   w-id: francois
   excerpt: Chef extraordinaire. Rival to Giancarlo, murderer of Giancarlo's master and destroyer of their school. Sought eldritch perfection in cuisine. Ruined, currently trapped in Cruncho.
 
+- name: Beppo
+  w-id: beppo
+  excerpt: Chef extraordinaire to the Bowmore family. Possibly fired.
+
+- name: Joseph Woodward
+  w-id: joseph-woodward
+  collection: npcs
+  
 - name: Bea
   w-id: bea
   excerpt: Former sous-chef to François. Wielder of an enormous claymore. Formerly a vampire in François' body, now trapped in Cruncho.
 
 - name: Studebaker Spud
   w-id: studebaker-spud
-  excerpt: Impresario, entrepreneur, idiot. Catspaw for the Seventh Tower Consortium.
+  excerpt: Impresario, entrepreneur, idiot. Catspaw for the Seventh Tower Consortium. Arrested and under suspicion after Joseph Woodward's failure and framing.
 
 - name: Dr. Carver Wrackham Malleus, PhD, IFD
   w-id: carver-malleus
@@ -27,7 +35,7 @@
   excerpt: Charterhall University President. Member of the Cult of Vazara. An old man longing for excitement.
 
 - name: Marlene
-  w-id: marline
+  w-id: marlene
   excerpt: Enthusiastic pugilist. Speaks only the language of the punch.
 
 - name: Reek
