fix tarvul excerpt

--- a/_data/world/characters/criminals.yml
+++ b/_data/world/characters/criminals.yml
@@ -32,7 +32,7 @@
 
 - name: Tarvul
   w-id: tarvul
-  exceprt: Escaped and reinstalled Billhooks gang leader. Owes the Nameless for his freedom.
+  excerpt: Escaped and reinstalled Billhooks gang leader. Owes the Nameless for his freedom.
 
 - name: Erin
   w-id: erin
