Vazara is a sky goddess, not a storm goddess

--- a/_data/world/characters/spooks-and-supernaturals.yml
+++ b/_data/world/characters/spooks-and-supernaturals.yml
@@ -69,4 +69,4 @@
 
 - name: Vazara
   w-id: vazara
-  excerpt: A centuries-old storm goddess that fought the Cinder King during the Calamity.
+  excerpt: A centuries-old sky goddess that fought the Cinder King during the Calamity.
