--- a/_data/gang/stats.yml
+++ b/_data/gang/stats.yml
@@ -9,10 +9,10 @@ stats:
 
 counters:
   xp: 8/10
-  rep: 7
-  heat: 3/9
+  rep: 11
+  heat: 6/9
   wanted-level: 2/4
-  vault: 12/16
+  vault: 14/16
 
 finances:
   expenses:
@@ -62,5 +62,5 @@ claims:
     effects:
       - +2 coin each downtime
   - name: turf-1
-    source: six-towers:historic-arena
+    source: six-towers:deckherd-hall
     is-turf: true
