--- a/_data/gang/stats.yml
+++ b/_data/gang/stats.yml
@@ -4,15 +4,15 @@ reputation: Professionals
 lair: -redacted-
 
 stats:
-  tier: 2
-  hold: strong
+  tier: 3
+  hold: weak
 
 counters:
-  xp: 8/10
-  rep: 11
+  xp: 1/10
+  rep: 0
   heat: 6/9
   wanted-level: 2/4
-  vault: 14/16
+  vault: 0/16
 
 finances:
   expenses:
